Adds and fixes projects tests.
